fix spells container on mobile view

--- a/sass/spells.scss
+++ b/sass/spells.scss
@@ -33,6 +33,10 @@
     @include h.center-container;
     color: v.$blue;
 
+    @media (max-width: 800px) {
+        width: 95%;
+    }
+
     ul {
         list-style-type: none;
     }
@@ -59,6 +63,7 @@
     padding: 0.3em;
     border: 0;
     cursor: pointer;
+    text-align: left;
 }
 
 .spells__name.wand::before {
