--- a/style.css
+++ b/style.css
@@ -219,6 +219,11 @@ header h1 {
   margin: 0 auto;
   color: #191635;
 }
+@media (max-width: 800px) {
+  .spells {
+    width: 95%;
+  }
+}
 .spells ul {
   list-style-type: none;
 }
@@ -244,6 +249,7 @@ header h1 {
   padding: 0.3em;
   border: 0;
   cursor: pointer;
+  text-align: left;
 }
 
 .spells__name.wand::before {
